--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,4 +1,4 @@
 {
-    "name": "my-project-devcontainer",
-    "image": "ghcr.io/maazghani/dotfiles:latest" 
+    "name": "webdev",
+    "image": "ghcr.io/maazghani/dotfiles:latest"
 }
